# ParsissCamera

./: .gitignore  CMakeLists.txt  ParsissCamera.cpp  ParsissCamera.h  ParsissCommunication.h  ParsissSimulatedCommunication.cpp  ParsissSimulatedCommunication.h  ParsissTool.cpp  ParsissTool.h  ParsissToolDetection.cpp  ParsissToolDetection.h  README.md  SimulatedTest.cpp  configuration.h.in  main.cpp
DataStructures/: Geometry.h  Graph.cpp  Graph.h  Heap.hpp  Matrix.cpp  Matrix.h  Matrix.hpp  Transformation.cpp  Transformation.h
FlyCapture/: FlyCapture.sln  FlyCapture.vcxproj  main.cpp
FlyCapture/FlyCapture/libs/: FlyCapture2_v140.lib  FlyCapture2d_v140.lib
IGSTK-Interface/: igstkParsissTest.cpp  igstkParsissTracker.cpp  igstkParsissTracker.h  igstkParsissTrackerTool.cpp  igstkParsissTrackerTool.h
Scripts/: CovertToolPatternFilesFormat.py  vtkICP.py
SimulatedData/: Accurect-Pointer.txt  Endonasal-RII.txt  HeadBand-Reference.txt  Navigation-Pointer.txt  Registration-Pointer.txt  points.csv
SimulatedData/converted/: Accurect-Pointer.txt  Endonasal-RII.txt  HeadBand-Reference.txt  Navigation-Pointer.txt  Registration-Pointer.txt
Utils/: StringUtils.cpp  StringUtils.h
nuget/: ParsissCamera.nuspec  ParsissCamera.props
